--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         tableColumns.every(function (index) {
                             const column = this;
                             const columnName = $(column.header()).text();
-                            const checkbox = $('<input type="checkbox" class="column-checkbox" data-column="' + index + '">').val(columnName).prop('checked', true);
+                            const checkbox = $('<input type="checkbox" class="column-checkbox" data-column="' + index + '">').prop('checked', true);
                             const label = $('<label></label>').append(checkbox).append(columnName);
                             columnsContainer.append($('<div class="column-group"></div>').append(label));
                         
