--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                             const checkbox = $('<input type="checkbox" class="column-checkbox" data-column="' + index + '">').val(columnName).prop('checked', true);
                             console.log("Checkbox Value:", checkbox.val()); 
                             const label = $('<label></label>').append(checkbox).append(columnName);
-                            columnsContainer.append($('<div class="column-group"></div>').append(label));
+                            const columnGroup = $('<div class="column-group"></div>').append(label);
+                            columnsContainer.append(columnGroup);
                             console.log("Column Group HTML:", columnGroup.html()); // ここで追加されるHTMLをログに出力
                         
                             // チェックボックスの状態によって列の表示/非表示を切り替える
