--- a/index.html
+++ b/index.html
@@ -102,13 +102,10 @@
                         this.api().columns().every(function (index) {
                             const column = this;
                             const columnName = $(column.header()).text();
-                            console.log("columnName:", columnName);
                             const checkbox = $('<input type="checkbox" class="column-checkbox" data-column="' + index + '">').val(columnName).prop('checked', true);
-                            console.log("Checkbox Value:", checkbox.val()); 
                             const label = $('<label></label>').append(checkbox).append(columnName);
                             const columnGroup = $('<div class="column-group"></div>').append(label);
                             columnsContainer.append(columnGroup);
-                            console.log("Column Group HTML:", columnGroup.html()); // ここで追加されるHTMLをログに出力
                         
                             // チェックボックスの状態によって列の表示/非表示を切り替える
                             checkbox.on('change', function () {
@@ -116,6 +113,7 @@
                                 table.column(colIdx).visible($(this).prop('checked'));
                             });
                         });
+                        console.log(columnsContainer.html());
 
                         const filterContainers = [];
 
