--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             const label = $('<label></label>').append(checkbox).append(columnName);
                             const columnGroup = $('<div class="column-group"></div>').append(label);
                             columnsContainer.append(columnGroup);
-                            console.log("Columns Container Inner HTML:", columnsContainer.innerHTML);  // ここで追加した要素の確認
+                            console.log("Columns Container Inner HTML:", $(columnsContainer).html());
                         
                             // チェックボックスの状態によって列の表示/非表示を切り替える
                             checkbox.on('change', function () {
