--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             const checkbox = $('<input type="checkbox" class="column-checkbox" data-column="' + index + '">').val(columnName).prop('checked', true);
                             const label = $('<label></label>').append(checkbox).append(columnName);
                             const columnGroup = $('<div class="column-group"></div>').append(label);
-                            columnsContainer.append(columnGroup);
+                            $('#columns-container').append(columnGroup); 
                             console.log("Columns Container Inner HTML:", $(columnsContainer).html());
                         
                             // チェックボックスの状態によって列の表示/非表示を切り替える
