--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                         this.api().columns().every(function (index) {
                             const column = this;
                             const columnName = $(column.header()).text();
-                            const checkbox = $('<input type="checkbox" class="column-checkbox" data-column="' + index + '">').val(columnName).prop('checked', true);
+                            const checkedState = (columnName === "建物倒壊危険度" || columnName === "火災危険度") ? false : true;
+                            const checkbox = $('<input type="checkbox" class="column-checkbox" data-column="' + index + '">').val(columnName).prop('checked', checkedState);
                             const label = $('<label></label>').append(checkbox).append(columnName);
                             const columnGroup = $('<div class="column-group"></div>').append(label);
                             $('#columns-container').append(columnGroup);
