--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     // 初期化時に特定の列を非表示に設定
                     columnDefs: [
                         {
-                            targets: ["建物倒壊危険度", "火災危険度"], // 非表示にしたい列のインデックスまたは名前
+                            targets: [3, 4], // 非表示にしたい列のインデックスまたは名前
                             visible: false
                         }
                     ],
