--- a/index.html
+++ b/index.html
@@ -97,15 +97,17 @@
             // DataTableを適用
             $(document).ready(function() {
                 const table = $('table.display').DataTable({
-                    // 初期化時に特定の列を非表示に設定
-                    columnDefs: [
-                        {
-                            targets: [3, 4], // 非表示にしたい列のインデックスまたは名前
-                            visible: false
-                        }
-                    ],
                     // DataTableが初期化された後に実行
                     initComplete: function () {
+
+                        // 初期化時に特定の列を非表示に設定
+                        this.api().columns().every(function (index) {
+                            const column = this;
+                            const columnName = $(column.header()).text();
+                            if (columnName === "建物倒壊危険度" || columnName === "火災危険度") {
+                                column.visible(false);
+                            }
+                        });
 
                         // 各列のチェックボックスを作成
                         this.api().columns().every(function (index) {
