--- a/index.html
+++ b/index.html
@@ -147,7 +147,12 @@
                             filterButtonsContainer.appendChild(filterButton[0]);
 
                             // const uniqueData = column.data().unique().sort();
-                            const uniqueData = column.data().toArray().map(d => d.split('<br>')).flat().filter((v, i, a) => a.indexOf(v) === i).sort();
+                            //const uniqueData = column.data().toArray().map(d => d.split('<br>')).flat().filter((v, i, a) => a.indexOf(v) === i).sort();
+                            const uniqueData = column.data().toArray()
+                                .map(d => d.split('・'))
+                                .flat()
+                                .filter((v, i, a) => a.indexOf(v) === i && !v.includes('・'))
+                                .sort();
 
                             // 全選択と選択クリアボタンをフィルターボックス内に追加
                             const filterActionButtons = $('<div class="filter-action-buttons"></div>');
