--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             // const uniqueData = column.data().unique().sort();
                             //const uniqueData = column.data().toArray().map(d => d.split('<br>')).flat().filter((v, i, a) => a.indexOf(v) === i).sort();
                             const uniqueData = column.data().toArray()
-                                .map(d => d.split('・'))
+                                .map(d => d.split('<br>'))
                                 .flat()
                                 .filter((v, i, a) => a.indexOf(v) === i && !v.includes('・'))
                                 .sort();
