--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
                             // const uniqueData = column.data().unique().sort();
                             //const uniqueData = column.data().toArray().map(d => d.split('<br>')).flat().filter((v, i, a) => a.indexOf(v) === i).sort();
                             const uniqueData = column.data().toArray()
-                                .map(d => d.split('<br>'))
-                                .flat()
-                                .filter((v, i, a) => a.indexOf(v) === i && !v.includes('<br>'))
+                                .flatMap(d => d.split('<br>')) // ここで「・」で分割された全ての値を取得
+                                .filter((v, i, a) => a.indexOf(v) === i) // 重複を取り除く
                                 .sort();
 
                             // 全選択と選択クリアボタンをフィルターボックス内に追加
