--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             // const uniqueData = column.data().unique().sort();
                             //const uniqueData = column.data().toArray().map(d => d.split('<br>')).flat().filter((v, i, a) => a.indexOf(v) === i).sort();
                             const uniqueData = column.data().toArray()
-                                .flatMap(d => d.split('<br>')) // ここで「・」で分割された全ての値を取得
+                                .flatMap(d => d.split('・')) // ここで「・」で分割された全ての値を取得
                                 .filter((v, i, a) => a.indexOf(v) === i) // 重複を取り除く
                                 .sort();
                             console.log('Unique Data:', uniqueData);
