--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 const th = document.createElement('th');
                 th.textContent = header;
                 th.classList.add('filterable');
-                if (header === "町丁目") {
+                if (header === "町") {
                     th.classList.remove('filterable');
                 }
                 headerRow.appendChild(th);
