--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
                             filterButtonsContainer.appendChild(filterButton[0]);
 
                             // const uniqueData = column.data().unique().sort();
-                            //const uniqueData = column.data().toArray().map(d => d.split('<br>')).flat().filter((v, i, a) => a.indexOf(v) === i).sort();
                             const uniqueData = column.data().toArray()
-                                .flatMap(d => d.split('・')) // ここで「・」で分割された全ての値を取得
+                                .flatMap(d => d.split(' ')) // ここで「・」で分割された全ての値を取得
                                 .filter((v, i, a) => a.indexOf(v) === i) // 重複を取り除く
                                 .sort();
                             console.log('Unique Data:', uniqueData);
@@ -170,12 +169,6 @@
                                 filterContainer.hide();
                             });
 
-                            // チェックボックスを作成
-                            //uniqueData.each(function (d) {
-                                //const checkbox = $('<input type="checkbox" class="filter-checkbox" data-column="' + column.index() + '">').val(d);
-                                //const label = $('<label></label>').append(checkbox).append(d); // チェックボックスと項目名を一行に配置
-                                //filterContent.append($('<div class="filter-group"></div>').append(label));
-                            //});
                             uniqueData.forEach(function (d) {
                                 const checkbox = $('<input type="checkbox" class="filter-checkbox" data-column="' + column.index() + '">').val(d);
                                 const label = $('<label></label>').append(checkbox).append(d); // チェックボックスと項目名を一行に配置
