--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                 column.search(searchString.slice(0, -1), true, false).draw();
 
                                 // 他の列のフィルタボックスを更新
-                                updateFilterBoxes();  // ここで他のフィルタボックスを更新する関数を呼び出し
+                                updateFilterBoxes(column.table().api());
 
                                 // フィルタが適用されているか確認
                                 if (searchString) {
@@ -220,10 +220,10 @@
                             });
 
                             // 他の列のフィルタボックスを更新する関数
-                            function updateFilterBoxes() {
-                                const filteredData = this.api().rows({ search: 'applied' }).data();
+                            function updateFilterBoxes(api) {
+                                const filteredData = api.rows({ search: 'applied' }).data();
                             
-                                this.api().columns('.filterable').every(function () {
+                                api.columns('.filterable').every(function () {
                                     const column = this;
                                     const columnName = $(column.header()).text();
                                     const filterContent = $('.filter-content').eq(column.index());
