--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
 
             // DataTableを適用
             $(document).ready(function() {
-                //const table = $('table.display').DataTable({
-                let table;
-                table = $('table.display').DataTable({
+                const table = $('table.display').DataTable({
                     // DataTableが初期化された後に実行
                     initComplete: function () {
 
@@ -149,14 +147,8 @@
                             const filterButton = $('<button class="filter-button">' + columnName + '</button>');
                             filterButtonsContainer.appendChild(filterButton[0]);
 
-                            // 全ての区を表示するために全ての区データを取得
-                            const allDistrictsData = columnName === "区" 
-                                ? table.column(index).data().unique().toArray() 
-                                : column.data().toArray().flatMap(d => d.split(' '));
-
                             // const uniqueData = column.data().unique().sort();
-                            //const uniqueData = column.data().toArray()
-                            const uniqueData = allDistrictsData
+                            const uniqueData = column.data().toArray()
                                 .flatMap(d => d.split(' '))
                                 .filter((v, i, a) => a.indexOf(v) === i)
                                 .sort();
