--- a/osusume_area.html
+++ b/osusume_area.html
@@ -6,8 +6,8 @@
     <title>おすすめエリア</title>
 </head>
 <body>
-    <p>世田谷区</p>
-    <h1>世田谷区の地震危険度が低く、地盤が固い地域の中でも家賃が低いトップ10をまとめてみました。</h1>
+    <h2>世田谷区</h2>
+    <p>世田谷区の地震危険度が低く、地盤が固い地域の中でも家賃が低いトップ10をまとめてみました。</p>
     <table border="1">
         <thead>
             <tr>
