--- a/osusume_area.html
+++ b/osusume_area.html
@@ -6,6 +6,8 @@
     <title>おすすめエリア</title>
 </head>
 <body>
+
+    //--------------------     世田谷区 開始     --------------------//
     <h2>世田谷区</h2>
     <p>世田谷区の地震危険度が低く、地盤が固い地域の中でも家賃が低いトップ10をまとめてみました。</p>
     <table border="1">
@@ -124,6 +126,7 @@
     <p>飲食店のバリエーションも豊富で、商店街にはリーズナブルな飲食店が多く、外食もしやすい環境です。特に千歳烏山駅周辺は多様な飲食店が集まっており、グルメな方にも満足いただけます。</p>
     <h3>自然環境</h3>
     <p>芦花公園駅から徒歩圏内の「蘆花恒春園」は自然が豊かで、四季折々の草花と触れ合える場所です。家族でのお出かけやリフレッシュに最適なスポットです。</p>
+    //--------------------     世田谷区 終了     --------------------//
     
 </body>
 </html>
