--- a/osusume_area.html
+++ b/osusume_area.html
@@ -6,9 +6,16 @@
     <title>おすすめエリア</title>
 </head>
 <body>
+    <h1>おすすめエリア</h1>
+
+    <h2>目次</h2>
+    <ul>
+        <li><a href="#setagaya">世田谷区</a></li>
+        <!-- 他の区のリンクをここに追加する予定です -->
+    </ul>
 
     //--------------------     世田谷区 開始     --------------------//
-    <h2>世田谷区</h2>
+    <h2 id="setagaya">世田谷区</h2>
     <p>世田谷区の地震危険度が低く、地盤が固い地域の中でも家賃が低いトップ10をまとめてみました。</p>
     <table border="1">
         <thead>
@@ -115,19 +122,23 @@
             </tr>
         </tbody>
     </table>
-    <p>中でも南烏山６丁目・南烏山２丁目・粕谷２丁目付近はは、千歳烏山駅、芦花公園駅、八幡山駅の3駅にアクセスしやすい場所に位置しており、おすすめです。</p>
+    <p>中でも南烏山６丁目・南烏山２丁目・粕谷２丁目付近は、千歳烏山駅、芦花公園駅、八幡山駅の3駅にアクセスしやすい場所に位置しており、おすすめです。</p>
+
     <h3>治安の良さ</h3>
     <p>治安が非常に良く、安心して暮らせる地域です。特に南烏山エリアは、犯罪がほとんど発生しておらず、女性の一人暮らしやファミリー層にも最適です。</p>
+
     <h3>交通アクセス</h3>
     <p>千歳烏山駅、芦花公園駅、八幡山駅の3駅は京王線が通っており、都心へのアクセスが非常に便利です。新宿まで約15分で行けるため、通勤や通学にも最適です。また、各駅には急行や快速が停まるため、移動がスムーズです。</p>
+
     <h3>買い物環境</h3>
     <p>各駅周辺にはスーパーやコンビニが充実しており、日常の買い物に困ることはありません。特に千歳烏山駅周辺には深夜まで営業しているスーパーや商店街があり、生活に必要な施設が整っています。</p>
+
     <h3>飲食環境</h3>
     <p>飲食店のバリエーションも豊富で、商店街にはリーズナブルな飲食店が多く、外食もしやすい環境です。特に千歳烏山駅周辺は多様な飲食店が集まっており、グルメな方にも満足いただけます。</p>
+
     <h3>自然環境</h3>
     <p>芦花公園駅から徒歩圏内の「蘆花恒春園」は自然が豊かで、四季折々の草花と触れ合える場所です。家族でのお出かけやリフレッシュに最適なスポットです。</p>
     //--------------------     世田谷区 終了     --------------------//
     
 </body>
 </html>
-
