--- a/osusume_area.html
+++ b/osusume_area.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>おすすめエリア</title>
+    <link rel="stylesheet" href="osusume_area.css">
 </head>
 <body>
-    <h1>世田谷区の地震危険度が低く、地盤が固い地域の中でも家賃が低いトップ10をまとめてみました。</h1>
+    <h1>おすすめエリア</h1>
 
+    <h2>目次</h2>
+    <ul>
+        <li><a href="#setagaya">世田谷区</a></li>
+    </ul>
+
+
+    <h2 id="setagaya">世田谷区</h2>
+    <p>世田谷区の地震危険度が低く、地盤が固い地域の中でも家賃が低いトップ10をまとめてみました。</p>
     <table border="1">
         <thead>
             <tr>
@@ -113,53 +122,18 @@
             </tr>
         </tbody>
     </table>
-
-    <h2>中でも南烏山６丁目・南烏山２丁目・粕谷２丁目付近は特に住みやすい地域です。</h2>
-
-    <p>世田谷区の南烏山６丁目、南烏山２丁目、粕谷２丁目は、住みやすさや利便性、安全性に優れた地域です。これらのエリアは、千歳烏山駅、芦花公園駅、八幡山駅の3駅にアクセスしやすい場所に位置しており、幅広い層におすすめです。</p>
-
-    <h3>家賃の安さ</h3>
-    <p>これらのエリアの家賃相場は、ワンルームで約7.5万円、1LDKで約11.5万円と、世田谷区内では比較的リーズナブルです。新宿や渋谷までのアクセスを考えると非常にお得なエリアです。</p>
-
+    <p>中でも南烏山６丁目・南烏山２丁目・粕谷２丁目付近は、千歳烏山駅、芦花公園駅、八幡山駅の3駅にアクセスしやすい場所に位置しており、おすすめです。</p>
     <h3>治安の良さ</h3>
     <p>治安が非常に良く、安心して暮らせる地域です。特に南烏山エリアは、犯罪がほとんど発生しておらず、女性の一人暮らしやファミリー層にも最適です。</p>
-
     <h3>交通アクセス</h3>
     <p>千歳烏山駅、芦花公園駅、八幡山駅の3駅は京王線が通っており、都心へのアクセスが非常に便利です。新宿まで約15分で行けるため、通勤や通学にも最適です。また、各駅には急行や快速が停まるため、移動がスムーズです。</p>
-
     <h3>買い物環境</h3>
     <p>各駅周辺にはスーパーやコンビニが充実しており、日常の買い物に困ることはありません。特に千歳烏山駅周辺には深夜まで営業しているスーパーや商店街があり、生活に必要な施設が整っています。</p>
-
     <h3>飲食環境</h3>
     <p>飲食店のバリエーションも豊富で、商店街にはリーズナブルな飲食店が多く、外食もしやすい環境です。特に千歳烏山駅周辺は多様な飲食店が集まっており、グルメな方にも満足いただけます。</p>
-
     <h3>自然環境</h3>
     <p>芦花公園駅から徒歩圏内の「蘆花恒春園」は自然が豊かで、四季折々の草花と触れ合える場所です。家族でのお出かけやリフレッシュに最適なスポットです。</p>
-
-    <h3>エリアごとの特徴</h3>
-
-    <h4>南烏山６丁目</h4>
-    <ul>
-        <li>千歳烏山駅周辺の利便性が高い</li>
-        <li>商店街が充実しており、日常の買い物が便利</li>
-        <li>治安が良く、静かな住環境</li>
-    </ul>
-
-    <h4>南烏山２丁目</h4>
-    <ul>
-        <li>千歳烏山駅、芦花公園駅、八幡山駅の3駅が利用可能</li>
-        <li>緑が多く、穏やかな住宅街</li>
-        <li>交通アクセスが良く、新宿や渋谷への通勤通学に便利</li>
-    </ul>
-
-    <h4>粕谷２丁目</h4>
-    <ul>
-        <li>芦花公園駅、八幡山駅へのアクセスが良い</li>
-        <li>自然豊かな「蘆花恒春園」が近くにあり、リフレッシュに最適</li>
-        <li>落ち着いた雰囲気の住宅街で、ファミリー層におすすめ</li>
-    </ul>
-
-    <p>これらのエリアは、住みやすさと利便性、安全性を兼ね備えた理想的な住まいを提供します。ぜひ、新しい生活の候補地としてご検討ください。</p>
+    
+    
 </body>
 </html>
-
