--- a/osusume_area.html
+++ b/osusume_area.html
@@ -14,9 +14,8 @@
         <li><a href="#setagaya">世田谷区</a></li>
     </ul>
 
-
     <h2 id="setagaya">世田谷区</h2>
-    <p>世田谷区の地震危険度が低く、地盤が固い地域の中でも家賃が低いトップ10をまとめてみました。</p>
+    <p><strong>世田谷区</strong>の地震危険度が低く、地盤が固い地域の中でも家賃が低いトップ10をまとめてみました。</p>
     <table border="1">
         <thead>
             <tr>
@@ -35,8 +34,8 @@
                 <td>上祖師谷４丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>仙川（徒歩10分圏外）</td>
-                <td>京王線</td>
+                <td><strong>仙川</strong>（徒歩10分圏外）</td>
+                <td><strong>京王線</strong></td>
                 <td>10.9</td>
             </tr>
             <tr>
@@ -44,8 +43,8 @@
                 <td>給田５丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>仙川（徒歩10分圏外）</td>
-                <td>京王線</td>
+                <td><strong>仙川</strong>（徒歩10分圏外）</td>
+                <td><strong>京王線</strong></td>
                 <td>10.9</td>
             </tr>
             <tr>
@@ -53,8 +52,8 @@
                 <td>北烏山２丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>富士見ヶ丘（徒歩10分圏外）</td>
-                <td>京王井の頭線</td>
+                <td><strong>富士見ヶ丘</strong>（徒歩10分圏外）</td>
+                <td><strong>京王井の頭線</strong></td>
                 <td>11.5</td>
             </tr>
             <tr>
@@ -62,8 +61,8 @@
                 <td>北烏山５丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>久我山（徒歩10分圏外）</td>
-                <td>京王井の頭線</td>
+                <td><strong>久我山</strong>（徒歩10分圏外）</td>
+                <td><strong>京王井の頭線</strong></td>
                 <td>11.5</td>
             </tr>
             <tr>
@@ -71,8 +70,8 @@
                 <td>喜多見８丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>喜多見</td>
-                <td>小田急小田原線</td>
+                <td><strong>喜多見</strong></td>
+                <td><strong>小田急小田原線</strong></td>
                 <td>11.5</td>
             </tr>
             <tr>
@@ -80,8 +79,8 @@
                 <td>千歳台６丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>千歳烏山（徒歩10分圏外）</td>
-                <td>京王線</td>
+                <td><strong>千歳烏山</strong>（徒歩10分圏外）</td>
+                <td><strong>京王線</strong></td>
                 <td>11.6</td>
             </tr>
             <tr>
@@ -89,8 +88,8 @@
                 <td>南烏山６丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>千歳烏山</td>
-                <td>京王線</td>
+                <td><strong>千歳烏山</strong></td>
+                <td><strong>京王線</strong></td>
                 <td>11.6</td>
             </tr>
             <tr>
@@ -98,8 +97,8 @@
                 <td>南烏山２丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>八幡山 芦花公園 千歳烏山</td>
-                <td>京王線</td>
+                <td><strong>八幡山</strong> <strong>芦花公園</strong> <strong>千歳烏山</strong></td>
+                <td><strong>京王線</strong></td>
                 <td>12.0</td>
             </tr>
             <tr>
@@ -107,8 +106,8 @@
                 <td>粕谷２丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>八幡山 芦花公園</td>
-                <td>京王線</td>
+                <td><strong>八幡山</strong> <strong>芦花公園</strong></td>
+                <td><strong>京王線</strong></td>
                 <td>12.1</td>
             </tr>
             <tr>
@@ -116,24 +115,22 @@
                 <td>八幡山２丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td>八幡山（徒歩10分圏外）</td>
-                <td>京王線</td>
+                <td><strong>八幡山</strong>（徒歩10分圏外）</td>
+                <td><strong>京王線</strong></td>
                 <td>12.2</td>
             </tr>
         </tbody>
     </table>
-    <p>中でも南烏山６丁目・南烏山２丁目・粕谷２丁目付近は、千歳烏山駅、芦花公園駅、八幡山駅の3駅にアクセスしやすい場所に位置しており、おすすめです。</p>
+    <p>中でも<strong>南烏山６丁目</strong>・<strong>南烏山２丁目</strong>・<strong>粕谷２丁目</strong>付近は、<strong>千歳烏山駅</strong>、<strong>芦花公園駅</strong>、<strong>八幡山駅</strong>の3駅にアクセスしやすい場所に位置しており、おすすめです。</p>
     <h3>治安の良さ</h3>
-    <p>治安が非常に良く、安心して暮らせる地域です。特に南烏山エリアは、犯罪がほとんど発生しておらず、女性の一人暮らしやファミリー層にも最適です。</p>
+    <p>治安が非常に良く、安心して暮らせる地域です。特に<strong>南烏山エリア</strong>は、犯罪がほとんど発生しておらず、女性の一人暮らしやファミリー層にも最適です。</p>
     <h3>交通アクセス</h3>
-    <p>千歳烏山駅、芦花公園駅、八幡山駅の3駅は京王線が通っており、都心へのアクセスが非常に便利です。新宿まで約15分で行けるため、通勤や通学にも最適です。また、各駅には急行や快速が停まるため、移動がスムーズです。</p>
+    <p><strong>千歳烏山駅</strong>、<strong>芦花公園駅</strong>、<strong>八幡山駅</strong>の3駅は<strong>京王線</strong>が通っており、都心へのアクセスが非常に便利です。<strong>新宿</strong>まで約15分で行けるため、通勤や通学にも最適です。また、各駅には急行や快速が停まるため、移動がスムーズです。</p>
     <h3>買い物環境</h3>
-    <p>各駅周辺にはスーパーやコンビニが充実しており、日常の買い物に困ることはありません。特に千歳烏山駅周辺には深夜まで営業しているスーパーや商店街があり、生活に必要な施設が整っています。</p>
+    <p>各駅周辺にはスーパーやコンビニが充実しており、日常の買い物に困ることはありません。特に<strong>千歳烏山駅周辺</strong>には深夜まで営業しているスーパーや商店街があり、生活に必要な施設が整っています。</p>
     <h3>飲食環境</h3>
-    <p>飲食店のバリエーションも豊富で、商店街にはリーズナブルな飲食店が多く、外食もしやすい環境です。特に千歳烏山駅周辺は多様な飲食店が集まっており、グルメな方にも満足いただけます。</p>
+    <p>飲食店のバリエーションも豊富で、商店街にはリーズナブルな飲食店が多く、外食もしやすい環境です。特に<strong>千歳烏山駅周辺</strong>は多様な飲食店が集まっており、グルメな方にも満足いただけます。</p>
     <h3>自然環境</h3>
-    <p>芦花公園駅から徒歩圏内の「蘆花恒春園」は自然が豊かで、四季折々の草花と触れ合える場所です。家族でのお出かけやリフレッシュに最適なスポットです。</p>
-    
-    
+    <p><strong>芦花公園駅</strong>から徒歩圏内の「<strong>蘆花恒春園</strong>」は自然が豊かで、四季折々の草花と触れ合える場所です。家族でのお出かけやリフレッシュに最適なスポットです。</p>
 </body>
 </html>
