--- a/osusume_area.html
+++ b/osusume_area.html
@@ -34,8 +34,8 @@
                 <td>上祖師谷４丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>仙川</strong>（徒歩10分圏外）</td>
-                <td><strong>京王線</strong></td>
+                <td>仙川（徒歩10分圏外）</td>
+                <td>京王線</td>
                 <td>10.9</td>
             </tr>
             <tr>
@@ -43,8 +43,8 @@
                 <td>給田５丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>仙川</strong>（徒歩10分圏外）</td>
-                <td><strong>京王線</strong></td>
+                <td>仙川（徒歩10分圏外）</td>
+                <td>京王線</td>
                 <td>10.9</td>
             </tr>
             <tr>
@@ -52,8 +52,8 @@
                 <td>北烏山２丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>富士見ヶ丘</strong>（徒歩10分圏外）</td>
-                <td><strong>京王井の頭線</strong></td>
+                <td>富士見ヶ丘（徒歩10分圏外）</td>
+                <td>京王井の頭線</td>
                 <td>11.5</td>
             </tr>
             <tr>
@@ -61,8 +61,8 @@
                 <td>北烏山５丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>久我山</strong>（徒歩10分圏外）</td>
-                <td><strong>京王井の頭線</strong></td>
+                <td>久我山（徒歩10分圏外）</td>
+                <td>京王井の頭線</td>
                 <td>11.5</td>
             </tr>
             <tr>
@@ -70,8 +70,8 @@
                 <td>喜多見８丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>喜多見</strong></td>
-                <td><strong>小田急小田原線</strong></td>
+                <td>喜多見</td>
+                <td>小田急小田原線</td>
                 <td>11.5</td>
             </tr>
             <tr>
@@ -79,8 +79,8 @@
                 <td>千歳台６丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>千歳烏山</strong>（徒歩10分圏外）</td>
-                <td><strong>京王線</strong></td>
+                <td>千歳烏山（徒歩10分圏外）</td>
+                <td>京王線</td>
                 <td>11.6</td>
             </tr>
             <tr>
@@ -88,8 +88,8 @@
                 <td>南烏山６丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>千歳烏山</strong></td>
-                <td><strong>京王線</strong></td>
+                <td>千歳烏山</td>
+                <td>京王線</td>
                 <td>11.6</td>
             </tr>
             <tr>
@@ -97,8 +97,8 @@
                 <td>南烏山２丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>八幡山</strong> <strong>芦花公園</strong> <strong>千歳烏山</strong></td>
-                <td><strong>京王線</strong></td>
+                <td>八幡山 芦花公園 千歳烏山</td>
+                <td>京王線</td>
                 <td>12.0</td>
             </tr>
             <tr>
@@ -106,8 +106,8 @@
                 <td>粕谷２丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>八幡山</strong> <strong>芦花公園</strong></td>
-                <td><strong>京王線</strong></td>
+                <td>八幡山 芦花公園</td>
+                <td>京王線</td>
                 <td>12.1</td>
             </tr>
             <tr>
@@ -115,8 +115,8 @@
                 <td>八幡山２丁目</td>
                 <td>台地1</td>
                 <td>1</td>
-                <td><strong>八幡山</strong>（徒歩10分圏外）</td>
-                <td><strong>京王線</strong></td>
+                <td>八幡山（徒歩10分圏外）</td>
+                <td>京王線</td>
                 <td>12.2</td>
             </tr>
         </tbody>
