--- a/osusume_area.html
+++ b/osusume_area.html
@@ -9,6 +9,13 @@
 <body>
     <h1>おすすめエリア</h1>
 
+    <nav>
+        <ul class="menu">
+            <li><a href="index.html">表</a></li>
+            <li><a href="osusume_area.html">おすすめエリア</a></li>
+        </ul>
+    </nav>
+
     <h2>目次</h2>
     <ul>
         <li><a href="#setagaya">世田谷区</a></li>
