--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 <body>
     <h1>東京23区 住所ごとの地震への強さ表</h1>
+    <nav>
+        <ul class="menu">
+            <li><a href="index.html">表</a></li>
+            <li><a href="osusume_area.html">おすすめエリア</a></li>
+        </ul>
+    </nav>
     <ul>
         <li>出典: <cite><a href="https://www.funenka.metro.tokyo.lg.jp/area-hazard-level/regional-risk-list/">東京都不燃化ポータルサイト 地域危険度一覧表</a></cite></li>
         <li>数字が小さい（1に近い）ほど危険度が低く、数字が大きい（5に近い）ほど危険度が高いです。</li>
