--- a/osusume_area.html
+++ b/osusume_area.html
@@ -166,7 +166,7 @@
     <h3>買い物環境</h3>
     <p>各駅周辺にはスーパーやコンビニが充実しており、日常の買い物に困ることはありません。特に<strong>千歳烏山駅周辺</strong>には深夜まで営業しているスーパーや商店街があり、生活に必要な施設が整っています。</p>
     <h3>飲食環境</h3>
-    <p>飲食店のバリエーションも豊富で、商店街にはリーズナブルな飲食店が多く、外食もしやすい環境です。特に<strong>千歳烏山駅</strong>周辺は多様な飲食店が集まっており、グルメな方にも満足いただけます。</p>
+    <p>飲食店のバリエーションも豊富で、商店街にはリーズナブルな飲食店が多く、外食もしやすい環境です。特に<strong>千歳烏山駅周辺</strong>は多様な飲食店が集まっており、グルメな方にも満足いただけます。</p>
     <h3>自然環境</h3>
     <p><strong>芦花公園駅</strong>から徒歩圏内の<strong>蘆花恒春園</strong>は自然が豊かで、四季折々の草花と触れ合える場所です。家族でのお出かけやリフレッシュに最適なスポットです。</p>
 
