--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 const th = document.createElement('th');
                 th.textContent = header;
                 th.classList.add('filterable');
-                if (header === "町" || header === "駅") {
+                if (header === "町" || header === "駅" || header === "家賃(万円)") {
                     th.classList.remove('filterable');
                 }
                 headerRow.appendChild(th);
