--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                 const th = document.createElement('th');
                 th.textContent = header;
                 th.classList.add('filterable');
-                const trimmedHeader = header.trim();
-                if (trimmedHeader === "町" || trimmedHeader === "駅" || trimmedHeader === "家賃(万円)") {
+                if (header.includes("町") || header.includes("駅") || header.includes("家賃")) {
                 //if (header === "町" || header === "駅" || header === "家賃(万円)") {
                     th.classList.remove('filterable');
                 }
