--- a/osusume_area.html
+++ b/osusume_area.html
@@ -50,7 +50,7 @@
     </ul>
 
     <h2 id="setagaya">世田谷区</h2>
-    <p><strong>世田谷区</strong>の地震危険度が低く、地盤が固い地域の中でも家賃が低いトップ10をまとめてみました。</p>
+    <p><strong>世田谷区</strong>の地震危険度が低く、地盤が固い地域（地盤分類が台地1）の中でも、家賃相場が低いトップ10をまとめてみました。</p>
     <details>
         <summary>トップ10</summary>
         <table border="1">
