--- a/osusume_area.html
+++ b/osusume_area.html
@@ -93,6 +93,49 @@
     <h3>自然環境</h3>
     <p><strong>芦花恒春園</strong>が近く、自然を楽しめる環境が整っています。散歩やジョギングにも適しており、リラックスできる空間です。</p>
 
+
+    <h2 id="chuo">中央区</h2>
+    <p><strong>中央区</strong>は台地の地盤がないため、比較的安全とされる沖積低地2の中で、家賃が安めなエリアをピックアップしました。</p>
+    <details>
+        <summary>家賃が安めなエリア トップ10</summary>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>区</th>
+                    <th>町</th>
+                    <th>地盤</th>
+                    <th>総合危険度</th>
+                    <th>駅</th>
+                    <th>路線</th>
+                    <th>家賃(万円)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>中央区</td><td>日本橋茅場町1丁目</td><td>沖積低地2</td><td>1</td><td>茅場町 日本橋 水天宮前</td><td>東京メトロ半蔵門線 東京メトロ銀座線 東京メトロ東西線 都営浅草線 東京メトロ日比谷線</td><td>17.1</td></tr>
+                <tr><td>中央区</td><td>日本橋小網町</td><td>沖積低地2</td><td>1</td><td>茅場町 人形町 水天宮前</td><td>都営浅草線 東京メトロ東西線 東京メトロ日比谷線 東京メトロ半蔵門線</td><td>17.1</td></tr>
+                <tr><td>中央区</td><td>京橋1丁目</td><td>沖積低地2</td><td>1</td><td>宝町 京橋 日本橋</td><td>東京メトロ銀座線 都営浅草線 東京メトロ東西線</td><td>17.7</td></tr>
+                <tr><td>中央区</td><td>日本橋本石町1丁目</td><td>沖積低地2</td><td>1</td><td>三越前 日本橋 新日本橋</td><td>JR総武線快速 東京メトロ銀座線 東京メトロ東西線 東京メトロ半蔵門線</td><td>17.7</td></tr>
+                <tr><td>中央区</td><td>日本橋室町2丁目</td><td>沖積低地2</td><td>1</td><td>三越前 日本橋 新日本橋</td><td>JR総武線快速 東京メトロ銀座線 東京メトロ東西線 東京メトロ半蔵門線</td><td>17.7</td></tr>
+                <tr><td>中央区</td><td>日本橋本石町3丁目</td><td>沖積低地2</td><td>1</td><td>三越前 神田 新日本橋</td><td>JR山手線 東京メトロ半蔵門線 JR総武線快速 JR京浜東北線 東京メトロ銀座線 JR中央線</td><td>17.8</td></tr>
+                <tr><td>中央区</td><td>日本橋室町3丁目</td><td>沖積低地2</td><td>1</td><td>三越前 神田 新日本橋</td><td>JR山手線 東京メトロ半蔵門線 JR総武線快速 JR京浜東北線 東京メトロ銀座線 JR中央線</td><td>17.8</td></tr>
+                <tr><td>中央区</td><td>日本橋本石町2丁目</td><td>沖積低地2</td><td>1</td><td>三越前 大手町 新日本橋</td><td>東京メトロ半蔵門線 JR総武線快速 東京メトロ銀座線 東京メトロ東西線 東京メトロ丸ノ内線</td><td>18.3</td></tr>
+                <tr><td>中央区</td><td>八重洲2丁目</td><td>沖積低地2</td><td>1</td><td>宝町 京橋 銀座一丁目</td><td>東京メトロ銀座線 都営浅草線 東京メトロ有楽町線</td><td>18.3</td></tr>
+                <tr><td>中央区</td><td>勝どき1丁目</td><td>沖積低地2</td><td>1</td><td>勝どき</td><td>都営大江戸線</td><td>18.4</td></tr>
+            </tbody>
+        </table>
+    </details>
+    <p>中でも<strong>日本橋茅場町1丁目</strong>・<strong>日本橋小網町</strong>は、都心の利便性を活かしながらも、比較的手頃な家賃で住めるエリアとしておすすめです。</p>
+    <h3>治安の良さ</h3>
+    <p>オフィス街としての性質が強く、夜間は比較的静かで落ち着いた雰囲気があります。防犯カメラの設置も多く、治安は安定しています。</p>
+    <h3>交通アクセス</h3>
+    <p>東京メトロ<strong>日比谷線・東西線の茅場町駅</strong>や<strong>都営浅草線の日本橋駅</strong>が利用でき、東京駅や銀座、新宿など主要エリアへのアクセスが非常に便利です。</p>
+    <h3>買い物環境</h3>
+    <p>スーパーは「まいばすけっと」「成城石井」「マルエツプチ」などが点在しており、日用品の購入に困ることはありません。</p>
+    <h3>飲食環境</h3>
+    <p>オフィスワーカー向けの飲食店が豊富で、ランチやディナーの選択肢が多いエリアです。特に人形町エリアには老舗の和食店も多く、グルメも楽しめます。</p>
+    <h3>自然環境</h3>
+    <p>近隣には隅田川テラスがあり、散歩やジョギングに適した環境が整っています。</p>
+
     
 </body>
 </html>
