--- a/osusume_area.html
+++ b/osusume_area.html
@@ -56,7 +56,7 @@
         <h2 id="setagaya">世田谷区</h2>
         <p><strong>世田谷区</strong>の中でも、地震危険度が低く、地盤が固い地域（地盤分類が台地1）のうち、家賃相場が比較的低いエリアをピックアップしました。</p>
         <details>
-            <summary>家賃が安めなエリア トップ10</summary>
+            <summary>おすすめエリア</summary>
             <table border="1">
                 <thead>
                     <tr>
@@ -98,9 +98,9 @@
 
     <div class="section-box">
         <h2 id="chuo">中央区</h2>
-        <p><strong>中央区</strong>は台地の地盤がないため、比較的安全とされる沖積低地2の中で、家賃が安めなエリアをピックアップしました。</p>
+        <p><strong>中央区</strong>は家賃が全体的に高く、台地の地盤がないですが、比較的安全とされる沖積低地2のエリアをピックアップしました。</p>
         <details>
-            <summary>家賃が安めなエリア トップ10</summary>
+            <summary>おすすめエリア</summary>
             <table border="1">
                 <thead>
                     <tr>
@@ -142,7 +142,7 @@
 
     <div class="section-box">
         <h2 id="nakano">中野区</h2>
-        <p><strong>中野区</strong>は台地1に位置し、地盤の安定したエリアが少ないですが、その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <p><strong>中野区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
         <details>
             <summary>家賃が安めなエリア トップ3</summary>
             <table border="1">
@@ -179,7 +179,7 @@
 
     <div class="section-box">
         <h2 id="kita">北区</h2>
-        <p><strong>北区</strong>は台地1に位置し、地盤の安定したエリアが多いのが特徴です。その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <p><strong>北区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
         <details>
             <summary>家賃が安めなエリア</summary>
             <table border="1">
