--- a/osusume_area.html
+++ b/osusume_area.html
@@ -144,7 +144,7 @@
         <h2 id="nakano">中野区</h2>
         <p><strong>中野区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
         <details>
-            <summary>家賃が安めなエリア トップ3</summary>
+            <summary>おすすめエリア</summary>
             <table border="1">
                 <thead>
                     <tr>
@@ -181,7 +181,7 @@
         <h2 id="kita">北区</h2>
         <p><strong>北区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
         <details>
-            <summary>家賃が安めなエリア</summary>
+            <summary>おすすめエリア</summary>
             <table border="1">
                 <thead>
                     <tr>
